--- a/src/components/02skill/02skill.css
+++ b/src/components/02skill/02skill.css
@@ -183,7 +183,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 2vw;
+  gap: 35px;
   width: 0;
   height: 100vh;
   opacity: 0;
