--- a/src/components/02skill/02skill.css
+++ b/src/components/02skill/02skill.css
@@ -214,9 +214,10 @@
   align-items: center;
   width: 19vw;
   min-width: 17em;
-  background: white;
+  height: 70vh;
+  min-height: 585px;
   opacity: 0.9;
-  height: 585px;
+  background: white;
   border-radius: 0.75em;
   margin-top: 0.6em;
 }
@@ -271,9 +272,10 @@
   align-items: center;
   width: 19vw;
   min-width: 17em;
+  height: 30vh;
+  min-height: 260px;
   background: white;
   opacity: 0.9;
-  height: 260px;
   border-radius: 0.75em;
   margin-top: 0.6em;
 }
@@ -302,7 +304,8 @@
 }
 
 .space_between {
-  height: 21px;
+  height: 2vh;
+  min-height: 22px;
 }
 
 .skill_dep_li {
