--- a/src/components/02skill/02skill.css
+++ b/src/components/02skill/02skill.css
@@ -213,6 +213,7 @@
   justify-content: center;
   align-items: center;
   width: 19vw;
+  max-width: 20em;
   min-width: 17em;
   height: 600px;
   opacity: 0.9;
@@ -270,6 +271,7 @@
   justify-content: center;
   align-items: center;
   width: 19vw;
+  max-width: 20em;
   min-width: 17em;
   height: 265px;
   background: white;
