--- a/src/components/02skill/02skill.css
+++ b/src/components/02skill/02skill.css
@@ -198,7 +198,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   height: 80vh;
   max-height: 50em;
 }
