--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -17,7 +17,6 @@
 /* ------------------------------------------ */
 
 .home_contact_container,
-.contact_container,
 .inactive_contact_container {
   display: flex;
   width: calc(25%);
@@ -150,29 +149,109 @@
 /* ------------------------------------------ */
 
 .contact_container {
+  display: flex;
+  position: relative;
   width: calc(100%);
+  height: 100vh;
+  color: #f9f9f9;
+  background: rgb(57, 57, 57);
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  transition: width 0.75s ease;
+}
+
+.contact_title {
+  display: flex;
+  position: absolute;
+  font-family: 'LeferiPoint-BlackA';
+  font-size: 3em;
+  top: 0.75em;
+  left: 1em;
+  width: 100%;
 }
 
 .contact_box {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  width: 0;
   opacity: 0;
-  animation-name: fade-in;
-  animation-delay: 0.85s;
-  animation-duration: 0.75s;
+  animation-name: fade-in-contact-box;
+  animation-delay: 0.75s;
+  animation-duration: 0.5s;
   animation-fill-mode: forwards;
+  margin-top: 6em;
 }
 
-.contact_break_line {
-  width: 1.5em;
-  margin: 1.25em 0 1.25em 0;
-  border-bottom: 1px solid #f9f9f9;
+.contact_form {
+  display: flex;
+  flex-direction: column;
+  width: 35em;
+  height: 62.5vh;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.contact_title {
-  font-size: 1.8em;
-  font-family: 'LeferiPoint-BlackA';
+.contact_name {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 12.5%;
+}
+
+.contact_name_box {
+  display: flex;
+  flex-direction: column;
+  height: 2em;
+  margin-top: 1em;
+  border: none;
+  border-radius: 5px;
+}
+
+.contact_email {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 12.5%;
+  margin-top: 1em;
+}
+
+.contact_email_box {
+  display: flex;
+  flex-direction: column;
+  height: 2em;
+  margin-top: 1em;
+  border: none;
+  border-radius: 5px;
+}
+
+.contact_message {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 45%;
+  margin-top: 1em;
+}
+
+.contact_message_box {
+  display: flex;
+  flex-direction: column;
+  resize: none;
+  height: 100%;
+  margin-top: 1em;
+  border: none;
+  border-radius: 5px;
+}
+
+.contact_send_button {
+  width: 140px;
+  height: 60px;
+  margin-top: 37.5px;
+  font-size: 20px;
+  border: none;
+  border-radius: 50px;
 }
 
 /* ------------------------------------------ */
@@ -212,5 +291,16 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+@keyframes fade-in-contact-box {
+  from {
+    opacity: 0;
+    width: 0;
+  }
+  to {
+    opacity: 1;
+    width: 100%;
   }
 }
