--- a/src/components/02skill/02skill.css
+++ b/src/components/02skill/02skill.css
@@ -2,7 +2,14 @@
   font-family: 'LeferiPoint-BlackA';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/LeferiPoint-BlackA.woff')
     format('woff');
-  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Leferi';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/LeferiPoint-SpecialA.woff')
+    format('woff');
+  font-weight: 300;
   font-style: normal;
 }
 
@@ -171,11 +178,15 @@
 .skill_title {
   display: flex;
   position: absolute;
-  font-family: 'LeferiPoint-BlackA';
+  font-family: 'Leferi';
   font-size: 3em;
   top: 0.75em;
-  left: 1em;
+  left: 0.75em;
   width: 100%;
+}
+
+.skill_title_02 {
+  font-family: 'LeferiPoint-BlackA';
 }
 
 .skill_box {
@@ -198,7 +209,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* align-items: center; */
   height: 80vh;
   max-height: 50em;
 }
