--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -189,8 +189,8 @@
   display: flex;
   flex-direction: column;
   width: 35em;
-  height: 62.5vh;
-  justify-content: space-between;
+  height: 55vh;
+  justify-content: center;
   align-items: center;
 }
 
@@ -198,13 +198,13 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 12.5%;
+  height: 15%;
 }
 
 .contact_name_box {
   display: flex;
   flex-direction: column;
-  height: 2em;
+  height: 2.5em;
   margin-top: 1em;
   border: none;
   border-radius: 5px;
@@ -214,14 +214,14 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 12.5%;
+  height: 15%;
   margin-top: 1em;
 }
 
 .contact_email_box {
   display: flex;
   flex-direction: column;
-  height: 2em;
+  height: 2.5em;
   margin-top: 1em;
   border: none;
   border-radius: 5px;
@@ -248,7 +248,7 @@
 .contact_send_button {
   width: 140px;
   height: 60px;
-  margin-top: 37.5px;
+  margin-top: 55px;
   font-size: 20px;
   border: none;
   border-radius: 50px;
