--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -188,8 +188,8 @@
 .contact_form {
   display: flex;
   flex-direction: column;
-  width: 35em;
-  height: 55vh;
+  width: 30em;
+  height: 60vh;
   justify-content: center;
   align-items: center;
 }
@@ -231,7 +231,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 45%;
+  height: 55%;
+  max-height: 300px;
   margin-top: 1em;
 }
 
@@ -248,7 +249,7 @@
 .contact_send_button {
   width: 140px;
   height: 60px;
-  margin-top: 55px;
+  margin-top: 50px;
   font-size: 20px;
   border: none;
   border-radius: 50px;
