--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -199,7 +199,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 15%;
+  height: 7.5em;
 }
 
 .contact_name_box {
@@ -215,7 +215,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 15%;
+  height: 7.5em;
   margin-top: 1em;
 }
 
