--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -232,8 +232,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 55%;
-  max-height: 300px;
+  height: 22em;
   margin-top: 1em;
 }
 
@@ -249,8 +248,8 @@
 
 .contact_send_button {
   width: 120px;
-  height: 60px;
-  margin-top: 60px;
+  height: 4em;
+  margin-top: 3em;
   font-size: 20px;
   border: none;
   border-radius: 10px;
