--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -189,9 +189,9 @@
 .contact_form {
   display: flex;
   flex-direction: column;
-  width: 30em;
-  height: 60vh;
-  max-height: 800px;
+  width: 27em;
+  height: 70vh;
+  max-height: 700px;
   justify-content: space-between;
   align-items: center;
 }
@@ -209,7 +209,7 @@
   height: 2.5em;
   color: white;
   border: none;
-  border-bottom: 1.5px solid white;
+  border-bottom: 2px solid white;
   background: rgb(57, 57, 57);
 }
 
@@ -231,7 +231,7 @@
   height: 2.5em;
   color: white;
   border: none;
-  border-bottom: 1.5px solid white;
+  border-bottom: 2px solid white;
   background: rgb(57, 57, 57);
 }
 
@@ -243,7 +243,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 22em;
+  height: 27.5em;
   margin-top: 1em;
 }
 
@@ -255,7 +255,7 @@
   margin-top: 1em;
   color: white;
   border: none;
-  border: 1.5px solid white;
+  border: 2px solid white;
   background: rgb(57, 57, 57);
 }
 
@@ -265,7 +265,7 @@
 
 .contact_send_button {
   width: 120px;
-  height: 3em;
+  height: 70px;
   margin-top: 2em;
   font-size: 20px;
   border: none;
