--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -207,6 +207,7 @@
   display: flex;
   flex-direction: column;
   height: 2.5em;
+  margin-top: 5px;
   color: white;
   border: none;
   border-bottom: 2px solid white;
@@ -229,6 +230,7 @@
   display: flex;
   flex-direction: column;
   height: 2.5em;
+  margin-top: 5px;
   color: white;
   border: none;
   border-bottom: 2px solid white;
@@ -252,7 +254,7 @@
   flex-direction: column;
   resize: none;
   height: 100%;
-  margin-top: 1em;
+  margin-top: 25px;
   color: white;
   border: none;
   border: 2px solid white;
