--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -214,6 +214,7 @@
   border-bottom: 2px solid white;
   background: rgb(57, 57, 57);
   font-family: 'Arita-dotum-Medium';
+  font-size: 1em;
 }
 
 .contact_name_box:focus {
@@ -238,6 +239,7 @@
   border-bottom: 2px solid white;
   background: rgb(57, 57, 57);
   font-family: 'Arita-dotum-Medium';
+  font-size: 1em;
 }
 
 .contact_email_box:focus {
@@ -263,7 +265,8 @@
   border: 2px solid white;
   background: rgb(57, 57, 57);
   font-family: 'Arita-dotum-Medium';
-  padding: 10px 10px 10px 10px;
+  font-size: 1em;
+  padding: 15px;
 }
 
 .contact_message_box {
@@ -276,6 +279,8 @@
   margin-top: 2.5em;
   font-size: 20px;
   border: none;
+  font-family: 'Arita-dotum-Medium';
+  font-weight: bold;
 }
 
 .contact_send_button:hover {
