--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -202,6 +202,7 @@
   flex-direction: column;
   width: 100%;
   height: 7.5em;
+  font-size: 17px;
 }
 
 .contact_name_box {
@@ -214,7 +215,7 @@
   border-bottom: 2px solid white;
   background: rgb(57, 57, 57);
   font-family: 'Arita-dotum-Medium';
-  font-size: 1em;
+  font-size: 16px;
 }
 
 .contact_name_box:focus {
@@ -227,6 +228,7 @@
   width: 100%;
   height: 7.5em;
   margin-top: 1em;
+  font-size: 17px;
 }
 
 .contact_email_box {
@@ -239,7 +241,7 @@
   border-bottom: 2px solid white;
   background: rgb(57, 57, 57);
   font-family: 'Arita-dotum-Medium';
-  font-size: 1em;
+  font-size: 16px;
 }
 
 .contact_email_box:focus {
@@ -252,6 +254,7 @@
   width: 100%;
   height: 27.5em;
   margin-top: 1em;
+  font-size: 17px;
 }
 
 .contact_message_box {
@@ -265,7 +268,7 @@
   border: 2px solid white;
   background: rgb(57, 57, 57);
   font-family: 'Arita-dotum-Medium';
-  font-size: 1em;
+  font-size: 16px;
   padding: 15px;
 }
 
