--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -261,7 +261,7 @@
   display: flex;
   flex-direction: column;
   resize: none;
-  height: 100%;
+  height: 20vh;
   margin-top: 20px;
   color: white;
   border: none;
