--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -177,7 +177,7 @@
   justify-content: center;
   align-items: center;
   width: 0;
-  height: 60vh;
+  height: 100vh;
   opacity: 0;
   animation-name: fade-in-contact-box;
   animation-delay: 0.75s;
@@ -192,9 +192,16 @@
   width: 27em;
   height: 70vh;
   max-height: 700px;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   font-family: 'Arita-dotum-Medium';
+}
+
+.contact_form_box {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 60vh;
 }
 
 .contact_name {
@@ -254,6 +261,7 @@
   width: 100%;
   height: 27.5em;
   margin-top: 1em;
+  margin-bottom: 0;
   font-size: 17px;
 }
 
@@ -261,7 +269,7 @@
   display: flex;
   flex-direction: column;
   resize: none;
-  height: 22.5vh;
+  height: 22vh;
   margin-top: 20px;
   color: white;
   border: none;
@@ -278,8 +286,8 @@
 
 .contact_send_button {
   width: 120px;
-  height: 65px;
-  margin-top: 15px;
+  height: 55px;
+  margin-top: 0.5vh;
   font-size: 20px;
   border: none;
   font-family: 'Arita-dotum-Medium';
