--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -190,7 +190,7 @@
   display: flex;
   flex-direction: column;
   width: 27em;
-  height: 70vh;
+  /* height: 70vh; */
   max-height: 700px;
   /* justify-content: space-between; */
   align-items: center;
@@ -259,7 +259,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 27.5em;
   margin-top: 1em;
   margin-bottom: 0;
   font-size: 17px;
@@ -287,7 +286,7 @@
 .contact_send_button {
   width: 120px;
   height: 55px;
-  margin-top: 0.5vh;
+  margin-top: 5.5vh;
   font-size: 20px;
   border: none;
   font-family: 'Arita-dotum-Medium';
