--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -176,7 +176,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 55px;
+  gap: 2.5vw;
   width: 0;
   height: 100vh;
   opacity: 0;
@@ -196,9 +196,7 @@
 .contact_form {
   display: flex;
   flex-direction: column;
-  width: 25vw;
-  min-width: 400px;
-  max-width: 550px;
+  width: 420px;
   max-height: 700px;
   align-items: center;
   font-family: 'Arita-dotum-Medium';
