--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -205,14 +205,13 @@
 .contact_form_box {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 420px;
   height: 60vh;
 }
 
 .contact_name {
   display: flex;
   flex-direction: column;
-  width: 100%;
   height: 7.5em;
   font-size: 17px;
 }
@@ -234,7 +233,6 @@
 .contact_email {
   display: flex;
   flex-direction: column;
-  width: 100%;
   height: 7.5em;
   margin-top: 1em;
   font-size: 17px;
@@ -257,7 +255,6 @@
 .contact_message {
   display: flex;
   flex-direction: column;
-  width: 100%;
   margin-top: 1em;
   margin-bottom: 0;
   font-size: 17px;
