--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -190,7 +190,7 @@
 .contact_script {
   min-width: 470px;
   height: 700px;
-  background: white;
+  background: rgb(57, 57, 57);
 }
 
 .contact_form {
