--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -186,7 +186,7 @@
   justify-content: center;
   align-items: center;
   /* DESKTOP GAP */
-  gap: 5vw;
+  gap: 200px;
   width: 0;
   height: 100vh;
   opacity: 0;
@@ -237,7 +237,7 @@
   display: flex;
   flex-direction: column;
   /* DESKTOP WIDTH */
-  width: 600px;
+  width: 500px;
   height: 60vh;
 }
 
