--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -186,7 +186,7 @@
   justify-content: center;
   align-items: center;
   /* DESKTOP GAP */
-  gap: 200px;
+  gap: 120px;
   width: 0;
   height: 100vh;
   opacity: 0;
@@ -194,7 +194,7 @@
   animation-delay: 0.75s;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
-  margin-top: 6em;
+  padding-top: 6em;
 }
 
 /* ----CONTACT SCRIPT---- */
@@ -202,7 +202,7 @@
 .contact_script {
   display: flex;
   min-width: 470px;
-  height: 655px;
+  height: 800px;
   background: rgb(57, 57, 57);
 }
 
@@ -227,9 +227,8 @@
 .contact_form {
   display: flex;
   flex-direction: column;
-  width: 420px;
+  width: 500px;
   height: 700px;
-  max-height: 700px;
   align-items: center;
   justify-content: center;
   font-family: 'Arita-dotum-Medium';
@@ -238,23 +237,26 @@
 .contact_form_box {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   /* DESKTOP WIDTH */
   width: 500px;
-  height: 75%;
+  gap: 10px;
 }
 
 .contact_name {
   display: flex;
   flex-direction: column;
+  width: 100%;
   height: 7.5em;
   font-size: 17px;
+  gap: 8px;
 }
 
 .contact_name_box {
   display: flex;
   flex-direction: column;
   height: 2.5em;
-  margin-top: 5px;
   color: white;
   border: none;
   border-bottom: 2px solid rgb(240, 240, 240);
@@ -267,16 +269,16 @@
 .contact_email {
   display: flex;
   flex-direction: column;
+  width: 100%;
   height: 7.5em;
-  margin-top: 1em;
   font-size: 17px;
+  gap: 8px;
 }
 
 .contact_email_box {
   display: flex;
   flex-direction: column;
   height: 2.5em;
-  margin-top: 5px;
   color: white;
   border: none;
   border-bottom: 2px solid rgb(240, 240, 240);
@@ -289,9 +291,10 @@
 .contact_message {
   display: flex;
   flex-direction: column;
-  margin-top: 1em;
+  width: 100%;
   margin-bottom: 0;
   font-size: 17px;
+  gap: 8px;
 }
 
 .contact_message_box {
@@ -299,7 +302,7 @@
   flex-direction: column;
   resize: none;
   height: 22vh;
-  margin-top: 20px;
+  margin-top: 16px;
   color: white;
   border: 2px solid rgb(240, 240, 240);
   background: rgb(57, 57, 57);
@@ -326,7 +329,7 @@
   border: 2px solid rgb(240, 240, 240);
   width: 140px;
   min-height: 55px;
-  margin-top: 5.5vh;
+  margin-top: 45px;
   transition: all 0.4s ease-in-out;
 }
 
@@ -412,12 +415,16 @@
 
 /* ------------------------------------------ */
 
-@media (max-width: 1680px) {
+/* @media (max-width: 1680px) {
   .contact_box {
     gap: 10px;
+  }
+
+  .contact_form {
+    width: 420px;
   }
 
   .contact_form_box {
     width: 420px;
   }
-}
+} */
