--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -415,9 +415,13 @@
 
 /* ------------------------------------------ */
 
-/* @media (max-width: 1680px) {
+@media (max-width: 1680px) {
   .contact_box {
     gap: 10px;
+  }
+
+  .contact_script_title_box {
+    margin-top: 65px;
   }
 
   .contact_form {
@@ -427,4 +431,4 @@
   .contact_form_box {
     width: 420px;
   }
-} */
+}
