--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -204,6 +204,7 @@
   min-width: 470px;
   height: 800px;
   background: rgb(57, 57, 57);
+  flex-direction: column;
 }
 
 .contact_script_title_box {
@@ -228,7 +229,7 @@
   display: flex;
   flex-direction: column;
   width: 500px;
-  height: 700px;
+  height: 720px;
   align-items: center;
   justify-content: center;
   font-family: 'Arita-dotum-Medium';
@@ -241,14 +242,14 @@
   justify-content: center;
   /* DESKTOP WIDTH */
   width: 500px;
-  gap: 10px;
+  gap: 15px;
 }
 
 .contact_name {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 7.5em;
+  height: 80px;
   font-size: 17px;
   gap: 8px;
 }
@@ -256,7 +257,7 @@
 .contact_name_box {
   display: flex;
   flex-direction: column;
-  height: 2.5em;
+  height: 30px;
   color: white;
   border: none;
   border-bottom: 2px solid rgb(240, 240, 240);
@@ -270,7 +271,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 7.5em;
+  height: 80px;
   font-size: 17px;
   gap: 8px;
 }
@@ -278,7 +279,29 @@
 .contact_email_box {
   display: flex;
   flex-direction: column;
-  height: 2.5em;
+  height: 30px;
+  color: white;
+  border: none;
+  border-bottom: 2px solid rgb(240, 240, 240);
+  background: rgb(57, 57, 57);
+  font-family: 'Arita-dotum-Medium';
+  font-size: 16px;
+  outline: none;
+}
+
+.contact_subject {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 80px;
+  font-size: 17px;
+  gap: 8px;
+}
+
+.contact_subject_box {
+  display: flex;
+  flex-direction: column;
+  height: 30px;
   color: white;
   border: none;
   border-bottom: 2px solid rgb(240, 240, 240);
@@ -302,7 +325,7 @@
   flex-direction: column;
   resize: none;
   height: 22vh;
-  margin-top: 16px;
+  margin-top: 10px;
   color: white;
   border: 2px solid rgb(240, 240, 240);
   background: rgb(57, 57, 57);
@@ -329,7 +352,7 @@
   border: 2px solid rgb(240, 240, 240);
   width: 140px;
   min-height: 55px;
-  margin-top: 45px;
+  margin-top: 30px;
   transition: all 0.4s ease-in-out;
 }
 
