--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -194,12 +194,21 @@
   animation-delay: 0.75s;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
-  padding-top: 6em;
+  padding-top: 1em;
 }
 
 /* ----CONTACT SCRIPT---- */
 
 .contact_script {
+  display: flex;
+  /* min-width: 470px;
+  height: 800px; */
+  background: rgb(57, 57, 57);
+  flex-direction: column;
+  justify-content: center;
+}
+
+.contact_script_box {
   display: flex;
   min-width: 470px;
   height: 800px;
@@ -261,7 +270,7 @@
   justify-content: center;
   /* DESKTOP WIDTH */
   width: 500px;
-  gap: 30px;
+  gap: 25px;
 }
 
 .contact_name {
@@ -334,6 +343,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 300px;
   margin-bottom: 0;
   font-size: 17px;
   gap: 8px;
@@ -343,7 +353,7 @@
   display: flex;
   flex-direction: column;
   resize: none;
-  height: 22vh;
+  height: 250px;
   margin-top: 10px;
   color: white;
   border: 2px solid rgb(240, 240, 240);
@@ -462,9 +472,9 @@
     gap: 10px;
   }
 
-  .contact_script_title_box {
+  /* .contact_script_title_box {
     margin-top: 68px;
-  }
+  } */
 
   .contact_form {
     width: 420px;
@@ -472,6 +482,5 @@
 
   .contact_form_box {
     width: 420px;
-    gap: 15px;
   }
 }
