--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -201,8 +201,6 @@
 
 .contact_script {
   display: flex;
-  /* min-width: 470px;
-  height: 800px; */
   background: rgb(57, 57, 57);
   flex-direction: column;
   justify-content: center;
@@ -214,6 +212,7 @@
   height: 800px;
   background: rgb(57, 57, 57);
   flex-direction: column;
+  justify-content: center;
 }
 
 .contact_script_title_box {
@@ -224,11 +223,13 @@
 }
 
 .contact_script_title01 {
+  height: 65px;
   color: rgb(57, 57, 57);
   -webkit-text-stroke: 2px rgb(240, 240, 240);
 }
 
 .contact_script_title02 {
+  height: 65px;
   color: rgb(240, 240, 240);
 }
 
@@ -249,6 +250,14 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+.contact_script_source {
+  display: flex;
+  height: 450px;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin-bottom: 10px;
 }
 
 /* -----CONTACT FORM----- */
