--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -223,7 +223,7 @@
 }
 
 .contact_script_title01 {
-  height: 65px;
+  height: 80px;
   color: rgb(57, 57, 57);
   -webkit-text-stroke: 2px rgb(240, 240, 240);
 }
@@ -236,7 +236,8 @@
 .contact_script_detail {
   display: flex;
   flex-direction: column;
-  margin-top: 40px;
+  font-size: 15px;
+  margin-top: 70px;
   gap: 20px;
 }
 
@@ -254,7 +255,7 @@
 
 .contact_script_source {
   display: flex;
-  height: 450px;
+  height: 410px;
   flex-direction: column;
   justify-content: flex-end;
   margin-bottom: 10px;
