--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -14,6 +14,14 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'SUIT-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Regular.woff2')
+    format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* CONTACT SCRIPT TITLE FONT */
 @font-face {
   font-family: 'KBO-Dia-Gothic_bold';
@@ -239,6 +247,7 @@
   font-size: 15px;
   margin-top: 70px;
   gap: 20px;
+  font-family: 'SUIT-Regular';
 }
 
 .contact_script_detail_kor {
@@ -261,6 +270,7 @@
   margin-bottom: 15px;
   font-size: 15px;
   gap: 16px;
+  /* font-family: 'SUIT-Regular'; */
 }
 
 .contact_script_email {
