--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -232,8 +232,17 @@
 
 .contact_script_title01 {
   height: 80px;
-  color: rgb(57, 57, 57);
-  -webkit-text-stroke: 2px rgb(240, 240, 240);
+  background: repeating-linear-gradient(
+    135deg,
+    rgb(57, 57, 57),
+    rgb(57, 57, 57) 3px,
+    rgb(220, 220, 220) 0,
+    rgb(220, 220, 220) 4px
+  );
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  /* color: rgb(57, 57, 57); */
+  -webkit-text-stroke: 1.5px rgb(220, 220, 220);
 }
 
 .contact_script_title02 {
