--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -235,9 +235,9 @@
   background: repeating-linear-gradient(
     135deg,
     rgb(57, 57, 57),
-    rgb(57, 57, 57) 2px,
-    rgb(100, 100, 100) 2px,
-    rgb(100, 100, 100) 4px
+    rgb(57, 57, 57) 2.5px,
+    rgb(90, 90, 90) 0,
+    rgb(90, 90, 90) 5px
   );
   background-clip: text;
   -webkit-text-fill-color: transparent;
