--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -339,6 +339,7 @@
 
 .contact_name {
   display: flex;
+  position: relative;
   flex-direction: column;
   width: 100%;
   height: 80px;
@@ -370,6 +371,14 @@
   font-family: 'SUIT-Regular';
   font-size: 15px;
   outline: none;
+}
+
+.contact_name_error {
+  display: flex;
+  position: absolute;
+  bottom: -12px;
+  font-family: 'SUIT-Regular';
+  font-size: 14px;
 }
 
 .contact_email {
