--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -379,10 +379,12 @@
   bottom: -12px;
   font-family: 'SUIT-Regular';
   font-size: 14px;
+  color: rgb(255, 95, 95);
 }
 
 .contact_email {
   display: flex;
+  position: relative;
   flex-direction: column;
   width: 100%;
   height: 80px;
@@ -416,8 +418,18 @@
   outline: none;
 }
 
+.contact_email_error {
+  display: flex;
+  position: absolute;
+  bottom: -12px;
+  font-family: 'SUIT-Regular';
+  font-size: 14px;
+  color: rgb(255, 95, 95);
+}
+
 .contact_subject {
   display: flex;
+  position: relative;
   flex-direction: column;
   width: 100%;
   height: 80px;
@@ -451,8 +463,18 @@
   outline: none;
 }
 
+.contact_subject_error {
+  display: flex;
+  position: absolute;
+  bottom: -12px;
+  font-family: 'SUIT-Regular';
+  font-size: 14px;
+  color: rgb(255, 95, 95);
+}
+
 .contact_message {
   display: flex;
+  position: relative;
   flex-direction: column;
   width: 100%;
   height: 300px;
@@ -487,6 +509,15 @@
   font-size: 15px;
   padding: 15px;
   outline: none;
+}
+
+.contact_message_error {
+  display: flex;
+  position: absolute;
+  bottom: -30px;
+  font-family: 'SUIT-Regular';
+  font-size: 14px;
+  color: rgb(255, 95, 95);
 }
 
 .contact_send_button {
