--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -202,7 +202,7 @@
   animation-delay: 0.75s;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
-  padding-top: 1em;
+  padding-top: 7px;
 }
 
 /* ----CONTACT SCRIPT---- */
