--- a/src/components/02skill/02skill.css
+++ b/src/components/02skill/02skill.css
@@ -213,8 +213,10 @@
 
 .skill_item_title {
   display: flex;
+  height: 40px;
   font-family: 'GothicA1-Bold';
   font-size: 2em;
+  margin-bottom: 10px;
 }
 
 .skill_ul_type1 {
@@ -223,13 +225,10 @@
   justify-content: center;
   align-items: center;
   width: 290px;
-  max-width: 22em;
-  min-width: 17em;
-  height: 100%;
+  height: 720px;
   opacity: 1;
   background: rgb(240, 240, 240);
   border-radius: 0.75em;
-  margin-top: 0.6em;
 }
 
 .skill_fe_li {
@@ -283,12 +282,11 @@
   width: 290px;
   max-width: 22em;
   min-width: 17em;
-  height: 38%;
+  height: 280px;
   /* height: 265px; */
   background: rgb(240, 240, 240);
   opacity: 1;
   border-radius: 0.75em;
-  margin-top: 0.6em;
 }
 
 .skill_be_li {
@@ -315,7 +313,7 @@
 }
 
 .space_between {
-  height: 10%;
+  height: 60px;
 }
 
 .skill_dep_li {
@@ -439,11 +437,11 @@
   }
 
   .skill_ul_type1 {
-    width: 320px;
+    width: 330px;
   }
 
   .skill_ul_type2 {
-    width: 320px;
+    width: 330px;
   }
 
   .skill_fe_li {
