--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -151,6 +151,19 @@
 
 .work_container {
   width: calc(100%);
+  justify-content: flex-start;
+  overflow: auto;
+}
+
+.work_container::-webkit-scrollbar {
+  width: 5px;
+  /* background-color: white; */
+}
+
+.work_container::-webkit-scrollbar-thumb {
+  width: 1px;
+  background-color: rgb(80, 80, 80);
+  border-radius: 10px;
 }
 
 .work_box {
@@ -163,6 +176,8 @@
   animation-delay: 0.85s;
   animation-duration: 0.75s;
   animation-fill-mode: forwards;
+  padding-top: 25px;
+  margin-bottom: 25px;
 }
 
 .work_item {
