--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -152,12 +152,12 @@
 .work_container {
   width: calc(100%);
   justify-content: flex-start;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .work_container::-webkit-scrollbar {
   width: 5px;
-  /* background-color: white; */
 }
 
 .work_container::-webkit-scrollbar-thumb {
@@ -171,13 +171,13 @@
   flex-direction: column;
   align-items: center;
   opacity: 0;
-  gap: 25px;
+  gap: 30px;
   animation-name: fade-in;
   animation-delay: 0.85s;
   animation-duration: 0.75s;
   animation-fill-mode: forwards;
-  padding-top: 25px;
-  margin-bottom: 25px;
+  padding-top: 30px;
+  margin-bottom: 30px;
 }
 
 .work_item {
@@ -185,7 +185,8 @@
   flex-direction: row;
   width: 950px;
   height: 450px;
-  border: solid 1px white;
+  background: rgb(240, 240, 240);
+  border-radius: 12px;
 }
 
 /* ------------------------------------------ */
