--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -195,7 +195,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 410px;
+  width: 390px;
   height: 550px;
   border: solid 1px black;
   gap: 5px;
@@ -205,7 +205,7 @@
   display: flex;
   align-items: center;
   position: relative;
-  width: 410px;
+  width: 100%;
   height: 402.5px;
   border: solid 1px black;
 }
@@ -238,7 +238,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 410px;
+  width: 100%;
   height: 35px;
   border: solid 1px black;
   gap: 10px;
@@ -253,7 +253,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 537px;
+  width: 560px;
   height: 550px;
   border: solid 1px black;
   gap: 10px;
@@ -262,7 +262,6 @@
 .work_script_title {
   display: flex;
   align-items: center;
-  width: 527px;
   height: 60px;
   border: solid 1px black;
   padding-left: 10px;
@@ -271,18 +270,39 @@
 .work_script_content {
   display: flex;
   align-items: center;
-  width: 527px;
   height: 250px;
   border: solid 1px black;
   padding-left: 10px;
 }
 
+.work_detail_container {
+  display: flex;
+  justify-content: center;
+  height: 180px;
+  border: solid 1px black;
+  gap: 5px;
+}
+
 .work_detail_box {
   display: flex;
-  width: 527px;
-  height: 170px;
+  flex-direction: column;
+  width: 270px;
+  gap: 10px;
   border: solid 1px black;
-  padding-left: 10px;
+}
+
+.work_detail_item {
+  display: flex;
+  flex-direction: column;
+}
+
+.work_detail_item_content {
+  display: flex;
+  font-size: 15px;
+}
+
+.work_detail_item_content_bold {
+  font-weight: bold;
 }
 
 /* ------------------------------------------ */
