--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -185,7 +185,7 @@
   display: flex;
   flex-direction: row;
   width: 950px;
-  height: 550px;
+  height: 600px;
   background: rgb(240, 240, 240);
   border-radius: 12px;
   box-shadow: 0 5px 15px rgb(31, 31, 31), 0 2px 15px rgb(31, 31, 31);
@@ -196,7 +196,7 @@
   flex-direction: column;
   justify-content: center;
   width: 390px;
-  height: 550px;
+  height: 600px;
   border: solid 1px black;
   gap: 5px;
 }
@@ -254,7 +254,7 @@
   flex-direction: column;
   justify-content: center;
   width: 560px;
-  height: 550px;
+  height: 600px;
   border: solid 1px black;
   gap: 10px;
 }
@@ -278,7 +278,7 @@
 .work_detail_container {
   display: flex;
   justify-content: center;
-  height: 180px;
+  height: 220px;
   border: solid 1px black;
   gap: 5px;
 }
@@ -286,6 +286,7 @@
 .work_detail_box {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   width: 270px;
   gap: 10px;
   border: solid 1px black;
