--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -287,6 +287,7 @@
   display: flex;
   align-items: center;
   font-family: 'Pretendard-Regular';
+  font-size: 17px;
   height: 300px;
   border: solid 1px black;
   padding-left: 10px;
