--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -286,8 +286,8 @@
 .work_script_content {
   display: flex;
   align-items: center;
-  font-family: 'Pretendard-Regular';
-  font-size: 17px;
+  /* font-family: 'Pretendard-Regular';
+  font-size: 17px; */
   height: 300px;
   border: solid 1px black;
   padding-left: 10px;
