--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -201,7 +201,7 @@
   display: flex;
   flex-direction: row;
   width: 950px;
-  height: 640px;
+  height: 620px;
   background: rgb(240, 240, 240);
   border-radius: 12px;
   box-shadow: 0 5px 15px rgb(31, 31, 31), 0 2px 15px rgb(31, 31, 31);
@@ -286,9 +286,8 @@
 .work_script_content {
   display: flex;
   align-items: center;
-  /* font-family: 'Pretendard-Regular';
-  font-size: 17px; */
-  height: 300px;
+  font-family: 'Pretendard-Regular';
+  height: 280px;
   border: solid 1px black;
   padding-left: 10px;
 }
