--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -280,7 +280,7 @@
   align-items: center;
   height: 60px;
   border: solid 1px black;
-  padding-left: 10px;
+  padding: 0 0 0 10px;
 }
 
 .work_script_content {
