--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -201,7 +201,7 @@
   display: flex;
   flex-direction: row;
   width: 950px;
-  height: 580px;
+  height: 620px;
   background: rgb(240, 240, 240);
   border-radius: 12px;
   box-shadow: 0 5px 15px rgb(31, 31, 31), 0 2px 15px rgb(31, 31, 31);
@@ -275,9 +275,10 @@
 
 .work_script_title {
   display: flex;
+  flex-direction: column;
   font-family: 'GangwonEduPowerExtraBoldA';
   font-size: 45px;
-  align-items: center;
+  justify-content: center;
   height: 60px;
   border: solid 1px black;
   padding: 0 0 0 10px;
